_sass/_projects.scss
.project {
  margin: 1em auto 2em;
  max-width: $container-width;

  @include breakpoint(gt-mobile) {
    margin-bottom: 6em;
  }
}

.project-title {
  @extend %large;
  @extend %fancy-type;

  margin-bottom: .5em;
}

.project-image {
  background-position: center;
  background-size: cover;
}

.project-about {
  margin-bottom: .5em;
}

.project-meta {
  @extend %flex-container;
  @extend %flex-space-between;
  @extend %xxs;

  @include breakpoint(mobile) {
    // scss-lint:disable ImportantRule
    display: block !important;
  }

  svg {
    height: .9em;
    margin-right: .25em;
  }
}

.project-links,
.project-skills {
  @extend %flex-child;
  @extend %flex-space-between;

  @include breakpoint(gt-mobile) {
    width: 50%;
  }
}

.project-link {
  margin-right: 1em;
}

.project-skills {
  @extend %text-right;

  color: $text-color-light;

  @include breakpoint(mobile) {
    margin-bottom: .5em;
    // scss-lint:disable ImportantRule
    text-align: left !important;
  }
}

